WIP: Propagate ModificationPath
This patch makes ModificationPath more widely available, resulting
in improved error reporting accuracy.

Change-Id: Id30eb269dfec7776f1cf59cdc3a54a8cf5dafe68
JIRA: XYZZY
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>